<resources>
    <string name="app_name">My Application</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="toggle_bluetooth">Toggle Bluetooth</string>
    <string name="bluetooth_logo">Bluetooth Logo</string>
    <string name="BLuetoothOff">Bluetooth is Off</string>
    <string name="BLuetoothOn">Bluetooth is On</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="scan_ble_devices">Scan BLE Devices</string>
    <string name="title_activity_blescanned">BLEScanned</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>